# Pac_ManCE

./: CMakeLists.txt
Algoritmos/: Algoritmo_A_Pathfindig.cpp  Algoritmo_A_Pathfindig.h
Model/: Fantasma1.cpp  Fantasma2.cpp  Nivel1.cpp  Nivel2.cpp  Pac_Man.cpp  Ventana_Principal.cpp  main.cpp
View-Controller/: Fantasma1.h  Fantasma2.h  Nivel1.h  Nivel2.h  Pac_Man.h  Ventana_Principal.h
